feat: Implement conversational heap dump analysis with a new chat service, UI, and DockerHub documentation.